Updated composer.json to better follow the technical review guidelines

--- a/composer.json
+++ b/composer.json
@@ -2,38 +2,12 @@
     "name": "custobar/custobar_m2_custoconnector",
     "type": "magento2-module",
     "description": "Custobar magento connector",
-    "keywords": [
-        "custobar"
-    ],
     "version": "2.0.0",
     "homepage": "https://custobar.com/",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Juha Törönen",
-            "email": "juha@custobar.com",
-            "homepage": "https://custobar.com/",
-            "role": "developer"
-        },
-        {
-            "name": "Olli Tyynelä",
-            "email": "olli.tyynela@focus.fi",
-            "homepage": "http://www.focus.fi/",
-            "role": "developer"
-        },
-        {
-            "name": "Jyrki Lilja",
-            "email": "jyrki.lilja@focus.fi",
-            "homepage": "https://www.focus.fi/",
-            "role": "developer"
-        },
-        {
-            "name": "Pyry Pennanen",
-            "email": "pyry.pennanen@focus.fi",
-            "homepage": "https://www.focus.fi/",
-            "role": "developer"
-        }
-    ],
+    "require": {
+        "magento/framework": ">=100.0.0"
+    },
     "autoload": {
         "files": [
             "registration.php"
@@ -42,10 +16,7 @@
             "Custobar\\CustoConnector\\": ""
         }
     },
-    "require": {
-        "magento/framework": "*"
-    },
-    "require-dev": {
-        "mustangostang/spyc": "^0.6.2"
-    }
+    "keywords": [
+        "custobar"
+    ]
 }
